<resources>
    <string name="app_name">Danny Interactive</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Nav-menu Titles -->
    <string name="nav_profile_pic">Profile Picture</string>
    <string name="nav_title">Danny Interactive</string>
    <string name="nav_description">Min kode er perfekt!</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>

    <string name="theme_title">Theme</string>
    <string name="dark_theme_switch">DarkTheme</string>


    <!-- Profile page -->
    <string name="input_navn">Name</string>
    <string name="input_navn_hint">Full Name</string>

    <!-- Profile page popup menu -->
    <string name="profilePic_Cam_Select">Camera</string>
    <string name="profilePic_Lib_Select">Camera Roll</string>


    <string name="frontPageText">Hej og velkommen til min app. Dette er min første android app. Men håber du finder den hyggelig, og at du kan lide mit hunde-billede, som er hentet fra en api.</string>
    <string name="dogDescription">Hunde-Billeder</string>
</resources>
