<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile"
            android:title="Home" />
        <item
            android:id="@+id/nav_vejr"
            android:icon="@drawable/ic_profile"
            android:title="Vejr"/>
    </group>


    <item
        android:title="@string/title_activity_settings"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>